ensure that site_phone_number does not wrap unless specified through styles

--- a/dev/css/common.scss
+++ b/dev/css/common.scss
@@ -831,6 +831,9 @@ textarea {
 /*--------------------------------------------------------------
 # Custom
 --------------------------------------------------------------*/
+.site-phone-number {
+	white-space: nowrap;
+}
 @import "mobile-menu.scss";
 
 /*--------------------------------------------------------------
